--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bethlehem Bouldering</title>
   <link rel="stylesheet" href="./css/home.css">
-  <link rel="stylesheet" href="https://use.typekit.net/jdx8ftv.css">
   <link rel="icon" type="image/png" href="./imgs/logo.png">
+  
+<style>
+  html, body {
+    font-family: 'Futura', sans-serif !important;
+  }
+
+  * {
+    font-family: inherit !important;
+  }
+</style>
+
 </head>
 <body>
 
