--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <title>Bethlehem Bouldering</title>
   <link rel="stylesheet" href="./css/home.css">
   <link rel="icon" type="image/png" href="./imgs/logo.png">
-  
+  <link rel="stylesheet" href="https://use.typekit.net/jdx8ftv.css">
+
 <style>
   html, body {
-    font-family: 'Futura', sans-serif !important;
+    font-family: "futura-pt", "Futura", sans-serif !important;
   }
 
   * {
