--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="details-column text-column">
-        <h2>DETAILS</h2>
+        <p class="details-title">DETAILS</p>
         <p class="subtitle">Background & Information</p>
         <p>Iben asked me to make this for anyone interested in bouldering at my farm. This should help anyone who aspires to that goal.
           <br><br>
@@ -91,7 +91,7 @@
 
     <!-- Left Column -->
     <div class="left-column">
-      <h1 class="page-title">ROUTES</h1>
+      <p class="page-title">ROUTES</p>
 
       <nav class="face-nav">
         <button class="face-link active" data-face="left">Left Face</button>
@@ -100,7 +100,7 @@
       </nav>
 
       <div class="route-info">
-        <h2 id="route-title">Route 1</h2>
+        <p class="route-title" id="route-title">Route 1</h2>
         <p id="route-description">
           This is the description for Route 1.
         </p>
@@ -118,6 +118,8 @@
         muted
         loop
         playsinline
+        webkit-playsinline
+        preload="auto"
       >
         <source id="route-video-source" src="./vids/map_1.mp4" type="video/mp4">
       </video>
