--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         playsinline
       >
         <source id="nav-video-source" src="./vids/navmap.mp4" type="video/mp4">
-      </video></div>
+      </video>
+    </div>
     </a>
 
   </section>
@@ -120,9 +121,9 @@
         playsinline
         webkit-playsinline
         preload="auto"
-        src="./vids/map_1.mp4">
-      </video>
-
+        src="./vids/map_1.mp4" 
+        type="video/mp4"
+      ></video>
     </div>
   </section>
 
