--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <div class="route-info">
         <p class="route-title" id="route-title">Route 1</p>
-        <p id="route-description">
+        <p id="route-description" class="route-description">
           This is the description for Route 1.
         </p>
       </div>
