--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     </div>
     <!-- Right Column -->
     <div class="video-column">
+      <button class="expand-btn" id="expandBtn">⛶</button>
       <video
         id="route-video"
         muted
@@ -130,8 +131,21 @@
     <img src="./imgs/logo.png" alt="Bethlehem Bouldering logo" class="footer-logo">
     <p>© 2026 Bethlehem Bouldering</p>
   </footer>
-  
+
   <script src="./js/routes.js"></script>
+
+    <div class="video-modal" id="videoModal">
+    <div class="modal-content">
+      <button class="close-modal" id="closeModal">✕</button>
+      <video
+        id="modalVideo"
+        muted
+        loop
+        playsinline
+        webkit-playsinline
+      ></video>
+    </div>
+  </div>
 
 </body>
 </html>
